--- a/scss/layouts/authentication/_forgot-password.scss
+++ b/scss/layouts/authentication/_forgot-password.scss
@@ -24,7 +24,7 @@
         margin-#{$right}: 30px !important;
         input {
           justify-content: center;
-          @extend .box-shadow;
+          @include box-shadow;
           height: 55px;
           background: $white;
           text-transform: none;
@@ -85,7 +85,7 @@
      color: white;
      border-radius: side-values(0px 20px 20px 20px) !important;
      margin-top: 22px;
-     @extend .box-shadow;
+     @include box-shadow;
      i{
        margin-left: 10px;
      }
@@ -175,7 +175,7 @@
         width: 98%;
 
         input {
-          @extend .box-shadow;
+          @include box-shadow;
           height: 55px;
           background: $white;
           text-transform: none;
@@ -208,7 +208,7 @@
      color: white;
      border-radius: side-values(0px 20px 20px 20px) !important;
      margin-top: 22px;
-     @extend .box-shadow;
+     @include box-shadow;
      i{
        margin-#{$left}: 10px;
        margin-#{$right}: 17px;
