--- a/scss/layouts/setting/_reset-password.scss
+++ b/scss/layouts/setting/_reset-password.scss
@@ -21,7 +21,7 @@
       background: none;
       border: none;
       font-family: Roboto;
-      @include font-size(16px)
+      @include font-size(16px);
       font-weight: normal;
       font-style: normal;
       font-stretch: normal;
@@ -33,7 +33,6 @@
   }
   .footer-password{
     .shadow{
-        @extend .group-shadow-div;
         width: 88% !important;
         height: 55px;
         @include margin-right(45px)
@@ -54,7 +53,7 @@
       margin-#{$left}: 10px;
       p{
         font-family: Roboto;
-        @include font-size(20px)
+        @include font-size(20px);
         font-weight: normal;
         font-style: normal;
         font-stretch: normal;
