--- a/scss/state/checkout/_cart.scss
+++ b/scss/state/checkout/_cart.scss
@@ -174,7 +174,7 @@
     .select__control{
       padding: side-values(10px 20px 13px 70px);
       background: rgba(0, 0, 0, 0.6);
-      @extend .border-radius-div;
+      @include border-radius-div;
     }
     .select__single-value{
       color: $white;
@@ -187,12 +187,9 @@
       margin-#{$right}: 20px;
     }
   }
-  //
   .item-list{
-    @extend .border-radius-div;
-    @extend .overflow-xy-h;
+    @include border-radius-div;
     li{
-      @extend .bg-white;
       padding: 20px 15px;
       figure{
         margin-bottom: 0;
@@ -202,7 +199,7 @@
         @include font-size(17px);
         text-transform: capitalize;
           a:hover{
-            @extend .underline;
+            text-decoration: underline;
           }
       }
       h4{
@@ -248,9 +245,9 @@
         height: 6px;
         background-color: $green;
         border-radius: 100px;
-        @extend .d-inline-block;
+        @include d-inline-block;
         margin-right: 5px;
-        @extend .position-relative;
+        position: relative;
         top: -2px;
       }
     }
@@ -258,10 +255,10 @@
   .actions{
     .btn-gray{
       padding: 9px 15px 4px;
-      @extend .d-inline-block;
+      @include d-inline-block;
       margin-#{$right}: 10px;
       span{
-        @extend .position-relative;
+        position: relative;
         top: -4px;
       }
     }
@@ -272,10 +269,8 @@
     }
   }
   .back-shop{
-    @extend .btn-gray-secondary;
-    @extend .d-block;
-    @extend .text-right;
-    @extend .mt-2;
+    @include d-block;
+    @include text-right;
     padding-right: 20px;
     padding-left: 20px;
     @include font-size(20px);
@@ -296,15 +291,10 @@
   h5{
     font-weight: 400;
     @include font-size(15px);
-    @extend .text-#{$right};
+    @include text-right;
     @include opacity(0.8);
   }
   .quantity{
-
-    .input-group-prepend,
-    input{
-
-    }
     input{
       height: 40px;
     }
@@ -322,7 +312,7 @@
         width: 11px;
         height: 2px;
         background: $basic-gray;
-        @extend .d-block;
+        @include d-block;
     }
   }
 }
