--- a/scss/layouts/authentication/_confirm-signup.scss
+++ b/scss/layouts/authentication/_confirm-signup.scss
@@ -150,7 +150,7 @@
      color: black;
      border-radius: side-values(0px 20px 20px 20px) !important;
      margin-top: 22px;
-     @extend .box-shadow;
+     @include box-shadow;
    }
    .btn-open-G{
      border-style: none;
@@ -163,7 +163,7 @@
      border-radius: side-values(0px 20px 20px 20px) !important;
      margin-top: 22px;
      margin-bottom: 150px;
-     @extend .box-shadow;
+     @include box-shadow;
      i{
        margin-#{$left}: 10px;
      }
