--- a/scss/layouts/authentication/_login.scss
+++ b/scss/layouts/authentication/_login.scss
@@ -2,7 +2,7 @@
   margin-top: 31px;
   background: $light-gray;
   .form-control {
-    @extend .rounded-rectangle;
+    @include rounded-rectangle;
     @include boarder-right-radius(0, 20px);
     height: 55px;
     padding-left: 20px;
@@ -36,8 +36,7 @@
     @include font-size(15px);
   }
   .btn-signin{
-    @extend .btn-primary;
-    @extend .box-shadow;
+    @include box-shadow;
     text-align: right;
     text-transform: capitalize;
     font-weight: normal;
