--- a/scss/layouts/authentication/_signup.scss
+++ b/scss/layouts/authentication/_signup.scss
@@ -18,11 +18,10 @@
   }
 
   .shadow-input {
-    @extend .rounded-rectangle;
+    @include rounded-rectangle;
   }
 
   .group-shadow-input {
-    @extend .group-shadow-div;
     height: 55px;
     top: 32px;
   }
@@ -66,7 +65,6 @@
   }
 
   .signup-form__two-inputs {
-    @extend .no-gutters;
     .col-6:nth-child(2) {
       input {
         border-radius: corner-values(20px 0 0 20px) !important;
@@ -85,7 +83,7 @@
       background: $white;
       width: 100%;
       height: 55px;
-      @extend .box-shadow;
+      @include box-shadow;
       .select__control {
         height: 100%;
       }
@@ -215,7 +213,7 @@
   }
   .one_shadow-input {
     input {
-      @extend .box-shadow;
+      @include box-shadow;
     }
   }
 }
