--- a/scss/modules/_blocks.scss
+++ b/scss/modules/_blocks.scss
@@ -1,11 +1,9 @@
 .order-summery{
-  @extend .border-radius-div;
-  @extend .overflow-xy-h;
-  @extend .box-shadow;
+  @include border-radius-div;
+  @include box-shadow;
   margin-bottom: 40px;
   > header{
     padding: 20px 20px 15px;
-    @extend .bg-white;
     margin-bottom: 2px;
     h2{
       @include font-size(25px);
@@ -18,7 +16,6 @@
     }
   }
   > ul{
-    @extend .bg-white;
     margin: 0;
     padding: 0 20px;
     li{
@@ -27,15 +24,15 @@
       line-height: 15px;
       label{
         @include opacity(0.7);
-        @extend .d-inline-block;
-        @extend .text-capitalize;
+        @include d-inline-block;
+        @include text-capitalize;
         @include font-size(13px);
-        @extend .mb-0;
+        margin-bottom: 0;
       }
       p{
         @include font-size(17px);
-        @extend .float-#{$right};
-        @extend .mb-0;
+        float: $right;
+        margin-bottom: 0;
         span{
           @extend .text-uppercase;
           @include font-size(12px);
@@ -48,11 +45,10 @@
     }
   }
   > .btn-primary{
-    @extend .w-100;
-    @extend .text-#{$right};
+    @include w-100;
+    @include text-right;
     @include font-size(19px);
-    @extend .text-capitalize;
-    @extend .mt-2;
+    @include text-capitalize;
     line-height: 27px;
     border-top-#{$right}-radius: 0 !important;
     i{
@@ -80,14 +76,14 @@
       margin-top: 2px;
       span{
         @include font-size(14px);
-        @extend .d-block;
+        @include d-block;
       }
     }
   }
   &:hover{
     p{
       span{
-        @extend .underline;
+        text-decoration: underline;
       }
     }
   }
@@ -95,12 +91,9 @@
 .banner-250{
   width: 250px;
   height: 250px;
-  @extend .bg-white;
-  @extend .text-center;
-  @extend .mx-auto;
+  text-align: center;
   margin-top: 30px;
   p{
-    @extend .d-table-cell;
-    @extend .align-middle;
+    vertical-align: middle
   }
 }
