--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -1,18 +1,17 @@
 .btn {
   padding: 10px 15px;
-  @extend .link-border-radius;
+  @include link-border-radius;
   @include transition(all, 0.5s, ease);
   cursor: pointer;
   font-weight: 400;
-  @extend .d-inline-block;
+  display: inline-block;
   border-width: 0;
   i {
-    @extend .d-inline-block;
+    display: inline-block;
   }
 }
 
 .btn-primary {
-  @extend .btn;
   border-style: none;
   background: $brand-color;
   text-transform: uppercase;
@@ -23,7 +22,6 @@
   }
 }
 .btn-gray {
-  @extend .btn;
   background: $light-gray;
   @include font-size(13px);
   text-transform: capitalize;
@@ -32,7 +30,6 @@
   }
 }
 .btn-gray-secondary {
-  @extend .btn;
   background: $dark-gray;
   &:hover {
     background: darken($dark-gray, 3%);
@@ -40,7 +37,6 @@
 }
 
 .btn-secondary {
-  @extend .btn;
   border-style: none;
 }
 
@@ -68,7 +64,6 @@
 }
 
 .btn-facebook {
-  @extend .btn-primary;
   background: $white;
   border-radius: side-values(0 0 0 20px) !important;
   &:hover,
@@ -77,7 +72,6 @@
   }
 }
 .btn-google {
-  @extend .btn-primary;
   background: $white;
   border-radius: side-values(0 0 20px 0) !important;
   height: 100%;
@@ -103,7 +97,7 @@
   }
   span {
     @include font-size(13px);
-    @extend .position-relative;
+    position: relative;
     top: -2px;
     margin-#{$left}: 2px;
   }
