--- a/scss/modules/_dialog.scss
+++ b/scss/modules/_dialog.scss
@@ -2,7 +2,7 @@
   border-radius: side-values(20px 0 20px 20px) !important;
   max-width: $max-container-popup;
   .modal-content {
-    @extend .container-fluid;
+    @include container-fluid;
     background: $light-gray;
     border-radius: inherit;
     .modal-header {
