removed prime react from the project

--- a/scss/main-ar/main-ar.scss
+++ b/scss/main-ar/main-ar.scss
@@ -60,6 +60,7 @@ $dir: rtl;
 @import "../modules/blocks";
 @import "../modules/buttons";
 @import "../modules/checkbox";
+@import "../modules/radio";
 @import "../modules/list-group";
 @import "../modules/components";
 @import "../modules/select";
