--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -60,6 +60,7 @@ $dir: ltr;
 @import "../modules/blocks";
 @import "../modules/buttons";
 @import "../modules/checkbox";
+@import "../modules/radio";
 @import "../modules/list-group";
 @import "../modules/components";
 @import "../modules/select";
