--- a/src/components/CheckoutConfirmation/CheckoutConfirmation.css
+++ b/src/components/CheckoutConfirmation/CheckoutConfirmation.css
@@ -1,8 +1,8 @@
-.CheckoutConfirmation-container {
+/* .CheckoutConfirmation-container {
  display: flex;
  justify-content: space-between;
 }
 
 .CheckoutConfirmation_items {
  display: flex;
-}
+} */
