cart item for order page

--- a/src/components/RenderCartItem/RenderCartItem.css
+++ b/src/components/RenderCartItem/RenderCartItem.css
@@ -1,4 +1,4 @@
-.RenderCartItem-box_item {
+/* .RenderCartItem-box_item {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
@@ -6,4 +6,4 @@
 
 .RenderCartItem-input {
  border: 0;
-}
+} */
