fixed the checkout

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -98,6 +98,7 @@ $dir: ltr;
 @import "state/checkout/order_summary.scss";
 @import "state/checkout/checkout-shipping";
 @import "state/checkout/checkout-payment";
+@import "state/checkout/checkout-order";
 @import "layouts/quotation-request";
 @import "layouts/send-request";
 @import "layouts/search_result";
