--- a/scss/modules/_radio.scss
+++ b/scss/modules/_radio.scss
@@ -25,7 +25,7 @@
 .checkmark {
   position: absolute;
   top: 4px;
-  left: 0;
+  #{$left}: 0;
   width: 14px;
   height: 14px;
   color: $brand-color;
@@ -47,7 +47,7 @@
 
 /* Style the checkmark/indicator */
 .radio-container .checkmark:after {
-  left: 9px;
+  #{$left}: 9px;
   top: 5px;
   width: 5px;
   height: 10px;
